# path_segmentation

path_segmentor/: CMakeLists.txt  CONTEXT.txt  context.txt  package.xml
path_segmentor/include/path_segmentor/: path_corridor_layer.hpp  terrain_backend.hpp  terrain_kernels.cuh  terrain_types.hpp
path_segmentor/launch/: corridor_viz.launch.py
path_segmentor/src/: path_corridor_layer.cpp  path_corridor_segmenter.cpp  terrain_backend_cpu.cpp  terrain_backend_cuda.cpp  terrain_kernels.cu
