<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_segmentor</name>
  <version>0.1.0</version>
  <description>
    CUDA-accelerated path corridor visualiser for Nav2 + ZED X.
    Projects the planned path corridor onto the camera feed with
    terrain-classified overlay: green=ground, red=wall, yellow=unknown.
    Supports offroad gravel terrain and slopes via bilateral depth
    filtering and vehicle-relative surface normal classification.
  </description>
  <maintainer email="himanshu.kumar_int@bullworkmobility.com">bullwork</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
